[gd_scene load_steps=6 format=2]

[ext_resource path="res://icon.png" type="Texture" id=1]
[ext_resource path="res://player/player.gd" type="Script" id=2]
[ext_resource path="res://player/Camera2D.gd" type="Script" id=3]

[sub_resource type="SpriteFrames" id=1]
animations = [ {
"frames": [ ExtResource( 1 ) ],
"loop": true,
"name": "idle",
"speed": 5.0
}, {
"frames": [ ExtResource( 1 ) ],
"loop": true,
"name": "run",
"speed": 5.0
}, {
"frames": [ ExtResource( 1 ) ],
"loop": true,
"name": "fall",
"speed": 5.0
}, {
"frames": [ ExtResource( 1 ) ],
"loop": true,
"name": "jump",
"speed": 5.0
}, {
"frames": [ ExtResource( 1 ) ],
"loop": true,
"name": "attack",
"speed": 5.0
} ]

[sub_resource type="RectangleShape2D" id=2]

[node name="player" type="KinematicBody2D"]
script = ExtResource( 2 )

[node name="AnimatedSprite" type="AnimatedSprite" parent="."]
frames = SubResource( 1 )
animation = "attack"

[node name="InvincibilityTimer" type="Timer" parent="."]

[node name="InvincibilityFlashTimer" type="Timer" parent="."]

[node name="DashTimer" type="Timer" parent="."]
wait_time = 0.3
one_shot = true

[node name="DashCooldownTimer" type="Timer" parent="."]
wait_time = 0.3
one_shot = true

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
scale = Vector2( 3, 3 )
shape = SubResource( 2 )

[node name="Camera2D" type="Camera2D" parent="."]
current = true
smoothing_enabled = true
script = ExtResource( 3 )

[node name="HurtBox" type="Area2D" parent="."]
collision_layer = 256
collision_mask = 256

[node name="CollisionShape2D" type="CollisionShape2D" parent="HurtBox"]
scale = Vector2( 3, 3 )
shape = SubResource( 2 )

[connection signal="timeout" from="InvincibilityTimer" to="." method="_on_InvincibilityTimer_timeout"]
[connection signal="timeout" from="InvincibilityFlashTimer" to="." method="_on_InvincibilityFlashTimer_timeout"]
[connection signal="timeout" from="DashTimer" to="." method="_on_DashTimer_timeout"]
[connection signal="timeout" from="DashCooldownTimer" to="." method="_on_DashCooldownTimer_timeout"]
[connection signal="body_entered" from="HurtBox" to="." method="_on_HurtBox_body_entered"]
[connection signal="body_exited" from="HurtBox" to="." method="_on_HurtBox_body_exited"]
